refactor(consumer): 优化消息批量消费实现和缓存计数键使用
- 移除过时的DTO类，减少冗余代码
- CollectUnCollectNoteConsumer和Comment2DBConsumer改用BatchPushConsumer实现批量消费
- 删除旧的DefaultMQPushConsumer相关配置和代码，简化初始化逻辑
- 统一修改缓存相关的Redis Key为CountKeyConstants定义，提升代码一致性
- Comment2DBConsumer增加无效回复重试次数限制，防止重复消费
- 替换UserRpcService为UserClient，更新用户服务调用方式
- CommentChangedCacheInvalidateConsumer和CountCommentChangedConsumer修改计数缓存键为CountKeyConstants版本
- 优化日志信息及异常处理，提升代码健壮性和可读性